# earthkit-plots

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  MANIFEST.in  Makefile  README.md  environment.yml  et 0799543  pyproject.toml  pytest.ini  setup.cfg
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: cd-test-pypi.yml  ci.yml  generate-test-images.yml  qa.yml
docs/: Untitled.ipynb  api.rst  conf.py  development.rst  domains-gallery.rst  earthkit-packages.yml  generate_domains_page.py  generate_styles_page.py  index.rst  install.rst  requirements.txt  styles-gallery.rst  user-guide.rst
docs/_static/: custom.css  custom.js
docs/examples/: ads.ipynb  anomaly-visualisations.ipynb  covjson-meteogram.ipynb  demo.ipynb  globe.ipynb  legend.ipynb  meteogram.ipynb  monthly-anomalies.ipynb  perterbed.covjson  polytope-meteogram.ipynb  polytope.ipynb  reduced_gg.ipynb  sandbox.ipynb  unstructured_data.ipynb
docs/release-notes/: deprecations.rst  index.rst  version-0.3-updates.rst  version-0.4-updates.rst  version-0.5-updates.rst  version-0.6-updates.rst  version-1.0.0rc-updates.rst
docs/source/: api.rst  conf.py  development.rst  domains-gallery.rst  generate_domains_page.py  generate_styles_page.py  index.rst  requirements.txt  styles-gallery.rst  why.rst
earthkit/plots/: __init__.py  _plugins.py  ancillary.py  bar.py  box.py  charts.py  definitions.py  envelopes.py  figures.py  globe.py  identifiers.py  inputs.py  keywords.py  line.py  metadata.py  quickmap.py  quickplot.py  schema.py  schemas.py  times.py  util.py  utils.py  version.py
tests/: conftest.py  downstream-ci-requirements.txt  environment-unit-tests.yml  test_ancillary.py  test_definitions.py  test_identifiers.py  test_schemas.py  test_version.py
tests/bounds/: test_bounds.py  test_coordinate_reference_systems.py  test_domains.py  test_natural_earth.py  test_optimisers.py
tests/components/: test_extractors.py  test_figures.py  test_layouts.py  test_subplots.py
(+830 files in other folders)
